--- a/app/src/main/resources/Strings.properties
+++ b/app/src/main/resources/Strings.properties
@@ -1,84 +1,2 @@
-# VistaModificaStudente
-StringaTitolo       = Compute your Weighted Average Grade
-StringaTitoloModificaStudente = Modify the Student's Data
-StringaTitoloModificaEsame = Modify the Exam's Data
-StringaFile     = File
-StringaMenuModifica = Edit
-StringaErrore       = Error
-StringaMessaggioInformazioni = The Weighted Average\nA Teaching Example\n\nBachelor Degre in Computer Science\nUniversity of Basilicata\ngiansalvatore.mecca@unibas.it\n
-
-StringaCognome      = Surname:
-StringaNome         = Name:
-StringaMatricola    = Student Id:
-StringaInsegnamento = Course
-StringaCrediti      = Credits
-StringaVoto         = Grade
-StringaLode         = Laude
-StringaData         = Date
-StringaGiorno       = Day
-StringaMese         = Month
-StringaAnno         = Year
-StringaInserisci    = Add
-StringaModifica     = Change
-StringaAnnulla      = Back
-StringaModificaStudente                     = Update Student
-StringaInserisciEsame                       = Add a New Exam
-StringaModificaEsame                        = Update Exam
-StringaEliminaEsame                         = Delete Exam
-StringaDatiStudente                         = Student's Data
-StringaInserisciDatiStudente                = Insert this student's data
-StringaElencoEsami                          = List of Exams
-StringaMediaPesata                          = Weighted Average
-StringaCreditiTotali                        = Total Credits:
-StringaMedia30mi                            = Weighted Average (30):
-StringaMedia110mi                           = Weighted Average (110):
-StringaNuovoStudente       = New Student
-StringaApri                = Open
-StringaSalva               = Save
-StringaApriConExcel        = Open in Excel
-StringaApriConExcelNoThread= Open in Excel (no Thread)
-StringaEsci                = Exit
-StringaInformazioni        = About this Application
-StringaTabellaEsami        = Table of Exams
-StringaListaEsami          = List of Exams
-
-StringaDescrizioneModificaStudente          = Update this student's data
-StringaDescrizioneAnnullaModificaStudente   = Cancel update
-StringaDescrizioneModificaEsame             = Update this exam's data
-StringaDescrizioneAnnullaModificaEsame      = Cancel update
-StringaDescrizioneNuovoStudente = Create a New Student
-StringaDescrizioneApri          = Load a student's data from file 
-StringaDescrizioneSalva         = Save the student's data into a file 
-StringaDescrizioneInformazioni  = About this Application
-StringaDescrizioneEsci          = Exit this Application 
-StringaDescrizioneApriConExcel  = Open Exams with Microsoft Excel 
-StringaDescrizioneApriConExcelNoThread = = Open Exams with Microsoft Excel (without handling threads)
-StringaDescrizioneInserisciEsame = Insert a New Exam
-StringaDescrizioneEliminaEsame  = Delete the Selected Exam
-
-StringaImpossibileCaricare      = It was not possible to load the data
-StringaComandoAnnullato         = Operation aborted 
-StringaImpossibileSalvare       = It was not possible to save the data
-StringaImpossibileEseguireExcel = There was an error while running Microsoft Excel
-StringaStudenteNullo            = You need to create a student first
-StringaNecessarioSelezionareEsame = You need to select an exam first
-StringaInsegnamentoVuoto        = The course name cannot be empty    
-StringaErroreCrediti            = Invalid value for credits 
-StringaCreditiNumero            = Credits must be a numerical value 
-StringaErroreVoto               = The grade must be a number between 18 and 30 
-StringaErroreGiorno             = The day is not correct
-StringaVotoNumero               = The grade must be a number between 18 and 30  
-StringaErroreLode               = Laude is only allowed if grade is 30 
-StringaNomeVuoto                = The name cannot be empty 
-StringaCognomeVuoto             = The surname cannot be empty 
-StringaErroreMatricola          = The Student id must be a positive number 
-StringaMatricolaNumero          = The Student id must be a positive number
-StringaFileNonTrovato           = File not found
-
-StringaStudenteModificato = The student's data have been modified
-StringaEsameInserito = The new exam has been added to the list
-StringaEsameModificato = The exam's data have been modified
-StringaEsameEliminato = Exam deleted
-StringaFileCaricato  = Data have been loaded
-StringaFileSalvato = Data have been saved
+MessagioUso = "usage file-name ..."
 
